@@ -101,7 +101,7 @@ public final class SimpleLogHandlerTest {
         SimpleLogHandler.builder().setPrefix(tmp.getRoot() + File.separator + "hello").build();
     handler.publish(new LogRecord(Level.SEVERE, "Hello world")); // To open the log file.
     assertThat(handler.getCurrentLogFilePath().get().toString())
-        .endsWith("." + SimpleLogHandler.getPidString());
+        .endsWith("." + ProcessHandle.current().pid());
   }
 
   @Test
@@ -179,7 +179,7 @@ public final class SimpleLogHandlerTest {
     Path logPath = handler.getCurrentLogFilePath().get();
     handler.close();
 
-    assertThat(new String(Files.readAllBytes(logPath), UTF_8)).isEqualTo("Hello world\n");
+    assertThat(Files.readString(logPath)).isEqualTo("Hello world\n");
   }
 
   @Test
@@ -238,7 +238,7 @@ public final class SimpleLogHandlerTest {
   }
 
   @Test
-  public void testSymlinkDisabling() throws Exception {
+  public void testSymlinkDisabling() {
     SimpleLogHandler handler =
         SimpleLogHandler.builder()
             .setPrefix(tmp.getRoot() + File.separator + "hello")
@@ -256,7 +256,7 @@ public final class SimpleLogHandlerTest {
             .setPrefix(tmp.getRoot() + File.separator + "hello")
             .setSymlinkName("bye" + File.separator + "bye")
             .setCreateSymlink(true);
-    assertThrows(IllegalArgumentException.class, () -> builder.build());
+    assertThrows(IllegalArgumentException.class, builder::build);
   }
 
   @Test
@@ -497,5 +497,29 @@ public final class SimpleLogHandlerTest {
     Logger logger = Logger.getAnonymousLogger();
 
     assertThrows(IOException.class, () -> handlerQuerier.getLoggerFilePath(logger));
+  }
+
+  @Test
+  public void publish_handlesInterrupt() throws Exception {
+    SimpleLogHandler handler =
+        SimpleLogHandler.builder()
+            .setPrefix(tmp.getRoot() + File.separator + "hello")
+            .setFormatter(new TrivialFormatter())
+            .build();
+    Thread t =
+        new Thread(
+            () -> {
+              Thread.currentThread().interrupt();
+              handler.publish(new LogRecord(Level.SEVERE, "Hello world")); // To open the log file.
+              assertThat(Thread.currentThread().isInterrupted()).isTrue();
+              handler.flush();
+              assertThat(Thread.currentThread().isInterrupted()).isTrue();
+              handler.close();
+              assertThat(Thread.currentThread().isInterrupted()).isTrue();
+            });
+    t.start();
+    t.join();
+    // For b/176321271
+    assertThat(Thread.currentThread().isInterrupted()).isFalse();
   }
 }
